<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto"
    tools:context="com.dolphin.android.dpfx.activity.StartActivity" >

    <item
        android:id="@+id/action_share"
        android:title="@string/imagepager_share"
        yourapp:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        yourapp:showAsAction="always"/>
    <item
        android:id="@+id/action_rotate_left"
        android:orderInCategory="100"
        android:title="@string/imagepager_rotate_left"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_rotate_right"
        android:orderInCategory="100"
        android:title="@string/imagepager_rotate_right"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/btn_imagegrid_menu_delete"
        android:orderInCategory="100"
        android:title="@string/imagepager_delete"
        app:showAsAction="always"/>

</menu>